# bmad-autopilot-orchestrator

./: .gitignore  README.md  autopilot.example.yaml  pyproject.toml
apps/macos/: Package.swift  build_backend.sh  project.yml
apps/macos/Sources/: AutopilotApp.swift  Backend.swift  Info.plist  Models.swift  RunStore.swift  Theme.swift  Views.swift
autopilot/: __init__.py  __main__.py  advisor.py  cli_sink.py  config.py  detect.py  events.py  git_rules.py  loop.py  resume.py  router.py  server.py  status.py  worker.py
tests/: autopilot.test.yaml  conftest.py  fakes.py  test_core.py  test_integration.py  test_loop.py  test_question_detector.py  test_server.py
tests/fixture_project/_bmad-output/implementation-artifacts/: sprint-status.yaml
