[project]
name = "autopilot"
version = "0.1.0"
description = "Orquestrador autônomo do ciclo de epics/stories do BMAD v6, com uma sessão 'advisor' que toma as decisões que as skills levantariam."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.2.110",
    "ruamel.yaml>=0.18",
    "pyyaml>=6.0",
]

[project.scripts]
autopilot = "autopilot.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autopilot*"]
exclude = ["refs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]          # só os nossos testes; não varre refs/ (repos de terceiros)
